# LiberaTango

./: README.md
Itech-services/dummy-application/: Makefile
Itech-services/dummy-application/src/: Makefile  enums_definitions.h  label.txt  libera_dummy.cpp  libera_dummy.h  simul_stream.h
Itech-services/dummy-application/src/conf/: libera-dummy  libera-dummy-postinst  libera-dummy-prerm
Itech-services/platform-application/: Makefile  label.txt
Itech-services/platform-application/src/: Makefile  platform_dummy.cpp  platform_dummy.h
Itech-services/platform-application/src/conf/: platform-dummy  platform-dummy-postinst  platform-dummy-prerm
debian/: changelog  control  libliberatango-dev.install  libliberatango.install  libliberatango.links  libliberatango.postinst  rules
src/: CMakeLists.txt  LiberaAttr.cpp  LiberaAttr.h  LiberaClient.cpp  LiberaClient.h  LiberaLogsAttr.cpp  LiberaLogsAttr.h  LiberaScalarAttr.h  LiberaSignal.cpp  LiberaSignal.h  LiberaSignalAttr.h  Makefile  install.sh  pylibera.pxd  pylibera.pyx  pyliberaclient.cpp  pyliberaclient.h  setup.py
